# AndroidNativeEmu

./: .gitignore  MANIFEST.in  README.md  README_cn.md  debug_utils.py  example_jni.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  pylint.yml
androidemu/: __version__.py  config.py  emulator.py  hooker.py  tracer.py
androidemu/const/: linux.py
androidemu/cpu/: interrupt_handler.py  syscall_handlers.py  syscall_hooks.py
androidemu/internal/: __init__.py  arm.py  memory.py  module.py  modules.py
androidemu/java/: constant_values.py  java_class_def.py  java_classloader.py  java_field_def.py  java_method_def.py  java_vm.py  jni_const.py  jni_env.py  jni_ref.py  reference_table.py
androidemu/java/classes/: constructor.py  executable.py  method.py
androidemu/java/helpers/: java_class_def.py  native_method.py
androidemu/native/: hooks.py  memory.py  memory_heap.py
androidemu/utils/: gen_jni_env.py  memory_helpers.py
androidemu/vfs/: file_helpers.py  file_system.py
examples/: debug_utils.py  example.py  example_douyin.py  example_jiagu.py  example_jni.py
samples/: app_process32  debug_utils.py  example.py  example_douyin.py  example_jiagu.py  example_jni.py  test_native.py
samples/example_binaries/: libcms.id1  libcms.id2  libcms.nam  libcms.til
src/androidemu/: config.py  emulator.py  emulator_error.py  hooker.py
src/androidemu/const/: android.py  linux.py
src/androidemu/cpu/: interrupt_handler.py  syscall_handler.py  (+3 more)
tests/: test_native.py
tests/memory/: test_heap_allocator.py
tools/: gen_jni_env.py
(+28 files in other folders)
